--- a/.github/workflows/chatgpt_rss.yml
+++ b/.github/workflows/chatgpt_rss.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install -q requests feedparser python-dateutil pytz
+          pip install -r requirements.txt
 
       - name: Build rss.xml
         env:
